import 'package:cloud_firestore/cloud_firestore.dart';
import 'package:equatable/equatable.dart';

enum UserStatus { active, inactive }

enum UserRoles { admin, cashier, kitchen, waiter, noRole }

class UserModel extends Equatable {
  final String id;
  final String name;
  final String email;
  final String phoneNumber;
  final String address;
  final UserRoles role;
  final String photoUrl;
  final UserStatus status;
  final Timestamp createdDate;
  final Timestamp lastLoginDate;
  final String deviceToken;

  const UserModel({
    required this.id,
    required this.name,
    required this.email,
    required this.phoneNumber,
    required this.address,
    required this.role,
    required this.photoUrl,
    required this.status,
    required this.createdDate,
    required this.lastLoginDate,
    required this.deviceToken,
  });

  factory UserModel.fromJson(Map<String, dynamic> json, String documentId) {
    return UserModel(
      id: documentId,
      name: json['name'] ?? 'invalid',
      email: json['email'] ?? 'invalid',
      phoneNumber: json['phoneNumber'] ?? 'invalid',
      address: json['address'] ?? 'invalid',
      role: UserRoles.values.firstWhere(
        (e) => e.name == (json['role'] ?? 'no-role'),
        orElse: () => UserRoles.noRole,
      ),
      photoUrl: json['photoUrl'] ?? 'invalid',
      status: UserStatus.values.firstWhere(
        (e) => e.name == (json['status'] ?? 'active'),
        orElse: () => UserStatus.active,
      ),
      createdDate: json['createdDate'] ?? Timestamp.now(),
      lastLoginDate: json['lastLoginDate'] ?? Timestamp.now(),
      deviceToken: json['deviceToken'] ?? 'invalid',
    );
  }

  Map<String, dynamic> toJson() {
    return {
      'id': id,
      'name': name,
      'email': email,
      'phoneNumber': phoneNumber,
      'address': address,
      'role': role.name,
      'photoUrl': photoUrl,
      'status': status.name,
      'createdDate': createdDate,
      'lastLoginDate': lastLoginDate,
      'deviceToken': deviceToken,
    };
  }

  UserModel copyWith({
    String? id,
    String? name,
    String? email,
    String? phoneNumber,
    String? address,
    UserRoles? role,
    String? photoUrl,
    UserStatus? status,
    Timestamp? createdDate,
    Timestamp? lastLoginDate,
    String? deviceToken,
  }) {
    return UserModel(
      id: id ?? this.id,
      name: name ?? this.name,
      email: email ?? this.email,
      phoneNumber: phoneNumber ?? this.phoneNumber,
      address: address ?? this.address,
      role: role ?? this.role,
      photoUrl: photoUrl ?? this.photoUrl,
      status: status ?? this.status,
      createdDate: createdDate ?? this.createdDate,
      lastLoginDate: lastLoginDate ?? this.lastLoginDate,
      deviceToken: deviceToken ?? this.deviceToken,
    );
  }

  @override
  List<Object?> get props => [
<<<<<<< HEAD
        id,
        name,
        email,
        phoneNumber,
        address,
        role,
        photoUrl,
        status,
        createdDate,
        lastLoginDate,
        deviceToken,
      ];
=======
    id,
    name,
    email,
    phoneNumber,
    address,
    role,
    photoUrl,
    status,
    createdDate,
    lastLoginDate,
    deviceToken,
  ];
>>>>>>> aa1f94d0acbd4d5c3cbe47af019f25cc39ce403c
}
